--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -7,7 +7,7 @@
       </div>
       <h3 class="text-center">Bienvenue LNF</h3>
       <p  class="text-center">Veuillez vous inscrire.</p>
-      <form #myForm="ngForm" class="m-t" role="form" novalidate>
+      <form #myForm="ngForm" class="m-t" role="form" novalidate (ngSubmit)="register()">
           <div class="form-group">
               <input type="text" class="form-control" name="name" [(ngModel)]="formData.name" placeholder="Votre nom complet" required="">
               <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['name']?.valid">
