--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -7,58 +7,58 @@
       </div>
       <h3 class="text-center">Bienvenue LNF</h3>
       <p  class="text-center">Veuillez vous inscrire.</p>
+      <span class="text-danger">{{ errorMessage }}</span>
       <form #myForm="ngForm" class="m-t" role="form" novalidate (ngSubmit)="register()">
           <div class="form-group">
               <input type="text" class="form-control" name="name" [(ngModel)]="formData.name" placeholder="Votre nom complet" required="">
               <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['name']?.valid">
-                {{ errorMessage }}
+                Veuillez entrer votre nom
               </div>
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="username" [(ngModel)]="formData.username" placeholder="Username" required="">
             <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['username']?.valid">
-              {{ errorMessage }}
+              Veuillez entrer votre identifiant
             </div>
           </div>
           <div class="form-group">
             <input type="email" class="form-control" name="email" [(ngModel)]="formData.email" placeholder="Email" required="">
             <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['email']?.valid">
-              {{ errorMessage }}
+              Veuillez entrer votre email
             </div>
           </div>
           <div class="form-group">
             <input type="password" class="form-control" name="password" [(ngModel)]="formData.password" placeholder="Mot de pass" required="">
             <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['password']?.valid">
-              {{ errorMessage }}
+              Veuillez entrer votre mot de pass
             </div>
           </div>
           <div class="form-group">
             <input type="password" class="form-control" name="confirmePassword" [(ngModel)]="formData.confirmePassword" placeholder="Mot de pass" required="">
-            <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['confirmePassword']?.valid">
-              {{ errorMessage }}
+            <div class="text-danger" c *ngIf="passwordMessage">
+              {{ passwordMessage }}
             </div>
           </div>
           <div class="form-group">
-            <select class="form-control m-b" name="role" [(ngModel)]="formData.role">
+            <select class="form-control m-b" name="role" [(ngModel)]="formData.role" required="">
               <option>Choisir le role</option>
-              <option>option 2</option>
-              <option>option 3</option>
-              <option>option 4</option>
+              <option *ngFor="let role of roles" [value]="role.name">{{ role.name }}</option>
             </select>
             <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['role']?.valid">
-              {{ errorMessage }}
+              Veuillez sélectionner un élément dans la liste
             </div>
           </div>
           <div class="form-group">
             <input type="text" class="form-control" name="telephone" [(ngModel)]="formData.telephone" placeholder="telephone" required="">
             <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['telephone']?.valid">
-              {{ errorMessage }}
+              Veuiller renseigner votre numéro de téléphone
+
             </div>
           </div>
 
           <button type="submit" class="btn btn-primary block full-width m-b" [disabled]="isSubmited">S'inscrire</button>
 
-          <a href="#"><small>Forgot password?</small></a>
+          <a href="#"><small>Mot de pass oublié?</small></a>
           <p class="text-muted text-center"><small>Vous avez un compte?</small></p>
           <a class="btn btn-sm btn-white btn-block" href="login">Se connecter</a>
       </form>
