--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,25 +7,26 @@
       </div>
       <h3>Welcome to IN+</h3>
       <p>Login in. To see it in action.</p>
-      <form #myForm="ngForm" class="m-t" role="form" action="" novalidate>
+      <span class="text-danger">{{ errorMessage }}</span>
+      <form (ngSubmit)="login()" #myForm="ngForm" class="m-t" role="form" action="" novalidate>
           <div class="form-group">
-              <input type="email" class="form-control" [(ngModel)]="formData.email" name="email" placeholder="Username" required="">
-              <div class="text-danger" *ngIf="myForm.submitted && !myForm.controls['name']?.valid">
-                {{ errorMessage }}
+              <input type="email" class="form-control" [(ngModel)]="formData.email" name="email" placeholder="Email" required="">
+              <div class="text-danger" *ngIf="myForm.submitted && !myForm.controls['email']?.valid">
+                Veuiller entrer votre email
               </div>
           </div>
           <div class="form-group">
-              <input type="password" class="form-control" placeholder="Password" name="password" required="">
-              <div class="text-danger" *ngIf="myForm.submitted && !myForm.controls['name']?.valid">
-                {{ errorMessage }}
+              <input type="password" class="form-control" [(ngModel)]="formData.password" placeholder="Password" name="password" required="">
+              <div class="text-danger" *ngIf="myForm.submitted && !myForm.controls['password']?.valid">
+                Veuiller entrer votre mot de pass
               </div>
           </div>
           <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
           <a href="#"><small>Forgot password?</small></a>
-          <p class="text-muted text-center"><small>Do not have an account?</small></p>
+          <p class="text-muted text-center"><small>Vous n'avez pas un compte?</small></p>
           <a class="btn btn-sm btn-white btn-block" href="register">Create an account</a>
       </form>
-      <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
+      <p class="m-t"> <small>CopiRight UNCHK  &copy; 2024</small> </p>
   </div>
 </div>
