--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
                 <li class="dropdown">
                   <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
                   <ul role="menu" class="dropdown-menu">
-                    <li><a href="">Menu item</a></li>
+                    <li><a [href]="'/user/'+currentUser">Données utilisateur</a></li>
                     <li><a href="">Menu item</a></li>
                   </ul>
                 </li>
