--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -39,7 +39,7 @@
                                         </tr>
                                       </thead>
                                       <tbody>
-                                        <tr *ngFor="let user of user">
+                                        <tr *ngFor="let user of users">
                                           <td>{{ user.id }}</td>
                                           <td>{{ user.username }}</td>
                                           <td>{{ user.email }}</td>
