--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,12 @@
             <div class="navbar-collapse collapse pull-right" id="navbar">
               <ul class="nav navbar-nav">
                 <li class="active">
-                  <a aria-expanded="false" role="button" href="#"> Accueil</a>
+                  <a aria-expanded="false" role="button" href=""> Accueil</a>
                 </li>
-                <li><a aria-expanded="false" role="button" href="#"> A Propos</a></li>
-                <li><a aria-expanded="false" role="button" href="#"> Rechercher un objet</a></li>
-                <li><a aria-expanded="false" role="button" href="#"> Publier une annonce</a></li>
+                <li><a aria-expanded="false" role="button" href="discussion"> Discussions</a></li>
+                <li><a aria-expanded="false" role="button" href="annonces"> Rechercher un objet</a></li>
+                <li><a aria-expanded="false" role="button" href="annonces/create"> Publier une annonce</a></li>
+                
                 <li class="dropdown">
                   <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
                   <ul role="menu" class="dropdown-menu">
