--- a/src/app/messagerie/messagerie.component.html
+++ b/src/app/messagerie/messagerie.component.html
@@ -2,22 +2,22 @@
     <div class="ibox-title">
       <h5>Chat en temps réel</h5>
     </div>
-  
+
     <div class="ibox-content">
       <div class="messages-box">
         <div *ngFor="let message of messages" class="message">
           <!-- Afficher uniquement les messages envoyés ou reçus par l'utilisateur connecté -->
           <div *ngIf="message.sender.id == m1 || message.receiver.id == m1">
 
-              <!-- Si l'utilisateur connecté n'est pas celui qui a publié l'annonce -->
-              
+              <!-- Si l'utilisateur connecté n'est pas celui qui a publié l'.titre -->
+
                 <strong>{{ message.sender.username }}:</strong> {{ message.content }}
-              
-            
+
+
           </div>
         </div>
       </div>
-  
+      <!-- {{ annonce.user.id }} -->
       <div class="chat-input-box">
         <input type="text" [(ngModel)]="newMessage" required
           placeholder="Écrire un message..."
@@ -27,4 +27,3 @@
       </div>
     </div>
   </div>
-  
