--- a/src/app/components/site/Annonces/list-annonces/list-annonces.component.html
+++ b/src/app/components/site/Annonces/list-annonces/list-annonces.component.html
@@ -5,7 +5,7 @@
                 <div class="ibox-content">
                     <h2>Liste des annonces</h2>
                     <small>Request time (0.23 seconds)</small>
-  
+
                     <!-- Barre de recherche -->
                     <div class="search-form">
                         <form action="index.html" method="get">
@@ -19,33 +19,33 @@
                             </div>
                         </form>
                     </div>
-  
+
                     <!-- Affichage des annonces avec pagination -->
                     <div *ngFor="let annonce of annonces | paginate: { itemsPerPage: 5, currentPage: page } | filter:searchTerm">
                         <div class="hr-line-dashed"></div>
                         <div class="search-result">
-                            <img [src]="'http://localhost:8080'+annonce.image" class="img-responsive img-circle m-b-xs" alt="profile" style="width: 200px;height: 200px;">
+                            <img [src]="'http://localhost:8080'+annonce.image" class="img-responsive m-b-xs" alt="profile" style="width: 100%;height: 200px;">
                             <h3><a href="#">{{ annonce.titre }}</a></h3>
-                            <a href="#" class="search-link">{{ annonce.description }}</a>
-                            <p>
-                                De nombreuses versions ont évolué au fil des ans, parfois par accident, parfois intentionnellement.
+
+                            <p class="search-link">
+                              {{ annonce.description }}
                             </p>
-                            <a [routerLink]="['edit', annonce.id]" class="btn btn-primary" routerLinkActive="router-link-active">Editer</a>
-                            <div *ngIf="id_pub != current">
-                                <a [routerLink]="['/msg', annonce.id]" class="btn btn-warning" routerLinkActive="router-link-active">Message</a>
+                            <div *ngIf="id_pub != current" >
+                                <a *ngIf="current == annonce.user.id" [routerLink]="['edit', annonce.id]" class="btn btn-primary" routerLinkActive="router-link-active">Editer</a>
+                                &nbsp;
+                                <a [routerLink]="['/msg', annonce.id]" class="m-l-3 btn btn-warning" routerLinkActive="router-link-active">Message</a>
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
                     </div>
-  
+
                     <!-- Pagination -->
                     <div class="text-center">
                         <pagination-controls (pageChange)="page = $event"></pagination-controls>
                     </div>
-  
+
                 </div>
             </div>
         </div>
     </div>
   </div>
-  
