--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,94 @@
 <body class="top-navigation">
-    <div id="wrapper" *ngIf="!isLoginRoute() && !isRegisterRoute()">
-      <div id="page-wrapper" class="gray-bg">
-        <div class="row border-bottom white-bg">
-          <nav class="navbar navbar-static-top" role="navigation">
-            <div class="navbar-header">
-              <button aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
-                <i class="fa fa-reorder"></i>
-              </button>
-              <a href="#" class="navbar-brand">Inspinia</a>
-            </div>
-            <div class="navbar-collapse collapse pull-right" id="navbar">
-              <ul class="nav navbar-nav">
-                <li class="active">
-                  <a aria-expanded="false" role="button" href=""> Accueil</a>
-                </li>
-                <li><a aria-expanded="false" role="button" href="discussion"> Discussions</a></li>
-                <li><a aria-expanded="false" role="button" href="annonces"> Rechercher un objet</a></li>
-                <li><a aria-expanded="false" role="button" href="annonces/create"> Publier une annonce</a></li>
-                
-                <li class="dropdown">
-                  <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
-                  <ul role="menu" class="dropdown-menu">
-                    <li><a [href]="'/user/'+currentUser">Données utilisateur</a></li>
-                    <li><a href="">Menu item</a></li>
-                  </ul>
-                </li>
-              </ul>
-              <ul class="nav navbar-top-links navbar-right">
-                <li><a (click)="logout()"><i class="fa fa-sign-out"></i> Log out</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-        <div class="wrapper wrapper-content">
-          <div class="container">
-            <router-outlet></router-outlet>
+  <div id="wrapper" *ngIf="!isLoginRoute() && !isRegisterRoute()">
+    <div id="page-wrapper" class="gray-bg">
+      <div class="row border-bottom white-bg">
+        <nav class="navbar navbar-static-top" role="navigation">
+          <div class="navbar-header">
+            <button
+              aria-controls="navbar"
+              aria-expanded="false"
+              data-target="#navbar"
+              data-toggle="collapse"
+              class="navbar-toggle collapsed"
+              type="button"
+            >
+              <i class="fa fa-reorder"></i>
+            </button>
+            <a href="#" class="navbar-brand">Inspinia</a>
           </div>
-        </div>
-        <div class="footer">
-          <div class="pull-right">10GB of <strong>250GB</strong> Free.</div>
-          <div><strong>Copyright</strong> Example Company &copy; 2024</div>
+          <div class="navbar-collapse collapse pull-right" id="navbar">
+            <ul class="nav navbar-nav">
+              <li class="active">
+                <a aria-expanded="false" role="button" href=""> Accueil</a>
+              </li>
+              <li><a aria-expanded="false" role="button" [href]="'discussion/' + currentUser"> Discussions</a></li>
+              <li><a aria-expanded="false" role="button" href="annonces"> Rechercher un objet</a></li>
+              <li><a aria-expanded="false" role="button" href="annonces/create"> Publier une annonce</a></li>
+
+              <li class="dropdown">
+                <a
+                  aria-expanded="false"
+                  role="button"
+                  href="#"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                >
+                  Menu item <span class="caret"></span>
+                </a>
+                <ul role="menu" class="dropdown-menu">
+                  <li><a [href]="'/user/' + currentUser">Données utilisateur</a></li>
+                  <li><a href="">Menu item</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-top-links navbar-right">
+              <!-- Icône de notification -->
+              <li class="dropdown" >
+                <a 
+                  aria-expanded="false"
+                  role="button"
+                  href="#"
+                  class="dropdown-toggle"
+                  data-toggle="dropdown"
+                >
+                  <i class="fa fa-bell" ></i>
+                
+                  <span  class="badge badge-danger">
+                            {{ annonces.length}}
+                  </span>
+                </a>
+                <ul role="menu" class="dropdown-menu">
+                  
+                  <li *ngFor="let annonce of annonces" >
+                    <a href="#" *ngFor="let message of messages"> {{ annonce.user}}</a>
+                  </li>
+                  <li >
+                    <a href="#">Annonce publiee</a>
+                  </li>
+                </ul>
+              </li>
+              <li><a (click)="logout()"><i class="fa fa-sign-out"></i> Log out</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="wrapper wrapper-content">
+        <div class="container">
+          <router-outlet></router-outlet>
         </div>
       </div>
+      <div class="footer">
+        <div class="pull-right">10GB of <strong>250GB</strong> Free.</div>
+        <div><strong>Copyright</strong> Example Company &copy; 2024</div>
+      </div>
     </div>
-  
-    <ng-container *ngIf="isLoginRoute()">
-      <app-login></app-login>
-    </ng-container>
-  
-    <ng-container *ngIf="isRegisterRoute()">
-      <app-register></app-register>
-    </ng-container>
-  </body>
-  
+  </div>
+
+  <ng-container *ngIf="isLoginRoute()">
+    <app-login></app-login>
+  </ng-container>
+
+  <ng-container *ngIf="isRegisterRoute()">
+    <app-register></app-register>
+  </ng-container>
+</body>
