--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -36,6 +36,7 @@
                                           <th>ID</th>
                                           <th>Nom d'utilisateur</th>
                                           <th>Email</th>
+                                          <th> role</th>
                                         </tr>
                                       </thead>
                                       <tbody>
@@ -43,6 +44,7 @@
                                           <td>{{ user.id }}</td>
                                           <td>{{ user.username }}</td>
                                           <td>{{ user.email }}</td>
+                                          <td>{{ user.role }}</td>
                                         </tr>
                                       </tbody>
                                     </table>
