--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -39,12 +39,9 @@
               {{ passwordMessage }}
             </div>
           </div>
-          <div class="form-group" hidden>
-            <select class="form-control m-b" name="role" [(ngModel)]="formData.role" required="">
-              <option>Choisir le role</option>
-              
-              <option   value="user"> user </option>
-            </select>
+          <div class="form-group" hidden >
+            <input hidden type="text" class="form-control" name="role" [(ngModel)]="formData.role" required="" disabled="">
+            
             <div class="text-danger" c *ngIf="myForm.submitted && !myForm.controls['role']?.valid">
               Veuillez sélectionner un élément dans la liste
             </div>
