--- a/src/app/components/site/home/home.component.html
+++ b/src/app/components/site/home/home.component.html
@@ -122,7 +122,7 @@
       <p>Objets retrouvés</p>
     </div>
     <div class="col-md-3">
-      <h2>1200+</h2>
+      <h2>{{users.length }}</h2>
       <p>Utilisateurs actifs</p>
     </div>
     <div class="col-md-3">
