--- a/src/app/messagerie/messagerie.component.html
+++ b/src/app/messagerie/messagerie.component.html
@@ -2,111 +2,51 @@
     <div class="ibox-title">
       <h5>Chat en temps réel</h5>
     </div>
-
     <div class="ibox-content">
-
-      <!-- {{ annonce.user.id }} -->
-
-
-      <div class="row">
-        <div class="col-lg-12">
-
-                <div class="ibox chat-view">
-
-                    <div class="ibox-title">
-                        <small class="pull-right text-muted">Last message:  Mon Jan 26 2015 - 18:39:23</small>
-                         Chat room panel
-                    </div>
-
-
-                    <div class="ibox-content">
-
-                        <div class="row">
-
-                            <div class="col-md-9 ">
-                                <div class="chat-discussion">
-
-                                    <div *ngFor="let message of messages" [ngClass]="{'chat-message left' : message.sender.id == m1, 'chat-message right' : message.sender.id != m1}">
-                                        <img class="message-avatar" src="https://avatar.iran.liara.run/public" alt="" >
-                                        <div class="message">
-                                            <a class="message-author" href="#"> {{ message.receiver.username }} </a>
-											                      <span class="message-date"> {{  message.sentAt | date:'fullDate' }} </span>
-                                            <span class="message-content">
-                                              {{ message.content }}
-                                            </span>
-                                        </div>
-                                    </div>
-
-
-                                </div>
-
-
-
-
-
-
-
-
-                            </div>
-
-
-                            <div class="col-md-3">
-                              <div class="chat-users">
-
-
-                                  <div class="users-list">
-                                      <div class="chat-user">
-                                          <img class="chat-avatar" src="https://avatar.iran.liara.run/public/boy" alt="" >
-                                          <div class="chat-user-name">
-                                              <a href="#">{{ sender.username }}</a>
-                                          </div>
-                                      </div>
-                                      <div class="chat-user">
-                                          <img class="chat-avatar" src="https://avatar.iran.liara.run/public/girl" alt="" >
-                                          <div class="chat-user-name">
-                                              <a href="#">{{ annonceur.username }}</a>
-                                          </div>
-                                      </div>
-
-
-
-                                  </div>
-
-                              </div>
-                          </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-9">
-                                <div class="chat-message-form">
-
-                                    <div class="form-group">
-                                        <textarea class="form-control message-input"
-                                         name="message" placeholder="Enter message text" [(ngModel)]="newMessage" (keyup.enter)="sendMessage()">
-                                        </textarea>
-                                    </div>
-                                    <br>
-                                    <div class="">
-                                      <button (click)="sendMessage()" [disabled]="newMessage.trim() === ''" class="btn btn-success" >Envoyer</button>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-
-
-                    </div>
-
-                </div>
+      <div class="chat-discussion">
+        <div *ngFor="let message of messages">
+          <div *ngIf="message.sender.id == m1 || message.receiver.id == m1">
+            <div 
+              [ngClass]="{'chat-message left': message.sender.id !== m1, 
+                          'chat-message right': message.sender.id === m1}">
+              <img class="message-avatar" src="https://avatar.iran.liara.run/public" alt="Avatar">
+              <div class="message">
+                <a class="message-author" href="#">
+                  <div *ngIf="message.sender.id === m1">
+                    {{ message.receiver.username }}
+                  </div>
+                  <div *ngIf="message.receiver.id === m1">
+                    {{ message.sender.username }}
+                  </div>
+                </a>
+                <span class="message-date">{{ message.sentAt | date:'short' }}</span>
+                <span class="message-content">{{ message.content }}</span>
+              </div>
+            </div>
+          </div>
         </div>
-
-    </div>
-      <!-- <div class="chat-input-box">
-        <input type="text" [(ngModel)]="newMessage" required
-          placeholder="Écrire un message..."
-          (keyup.enter)="sendMessage()"
-        />
-        <button (click)="sendMessage()" [disabled]="newMessage.trim() === ''">Envoyer</button>
-      </div> -->
+      </div>
+  
+      <!-- Formulaire de saisie de message -->
+      <div class="chat-message-form">
+        <div class="form-group">
+          <textarea 
+            class="form-control message-input" 
+            [(ngModel)]="newMessage" 
+            placeholder="Écrire un message..." 
+            (keyup.enter)="sendMessage()">
+          </textarea>
+        </div>
+        <br>
+        <div class="text-right">
+          <button 
+            class="btn btn-success" 
+            (click)="sendMessage()" 
+            [disabled]="newMessage.trim() === ''">
+            Envoyer
+          </button>
+        </div>
+      </div>
     </div>
   </div>
+  
