--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="middle-box text-center loginscreen animated fadeInDown">
   <div>
-      <div>
+    <div>
 
-          <h1 class="logo-name">IN+</h1>
+      <img src="/assets/img/site/logo.png" alt="" srcset="" width="300" height="200">
 
-      </div>
-      <h3>Welcome to IN+</h3>
-      <p>Login in. To see it in action.</p>
+  </div>
+      <h3>Bienvenu Sur LOSTNFOUND</h3>
+      <p>Connectez-vous.</p>
 
       <form #myForm="ngForm" class="m-t" role="form"  novalidate (ngSubmit)="login()" method="post">
           <div class="form-group">
@@ -25,8 +25,8 @@
 
           <a href="#"><small>Forgot password?</small></a>
           <p class="text-muted text-center"><small>Vous n'avez pas un compte?</small></p>
-          <a class="btn btn-sm btn-white btn-block" href="register">Create an account</a>
+          <a class="btn btn-sm btn-white btn-block" href="register">Créer un compte</a>
       </form>
-      <p class="m-t"> <small>CopiRight UNCHK  &copy; 2024</small> </p>
+      <p class="m-t"> <small>CopyRight UNCHK  &copy; 2024</small> </p>
   </div>
 </div>
