--- a/src/app/components/site/home/home.component.html
+++ b/src/app/components/site/home/home.component.html
@@ -2,8 +2,8 @@
   <h1>Bienvenue sur Notre Plateforme</h1>
   <p>Trouvez ou publiez des annonces d'objets retrouvés facilement et rapidement.</p>
   <div class="btn-container">
-    <a role="button" class="btn btn-primary btn-lg btn-custom">Un objet retrouvé? </a>
-    <a role="button" class="btn btn-secondary btn-lg btn-custom">Rechercher un objet</a>
+    <a role="button" href="annonces/create" class="btn btn-primary btn-lg btn-custom">Un objet retrouvé? </a>
+    <a role="button" href="annonces" class="btn btn-secondary btn-lg btn-custom">Rechercher un objet</a>
   </div>
 </div>
 
@@ -64,27 +64,18 @@
 <!-- Section supplémentaire : Dernières annonces -->
 <div class="col-lg-12">
   <h1 class="text-center">Dernières Annonces</h1>
-  <div class="row">
-    <div class="col-md-3">
+  <div class="row" >
+    <div class="col-md-3" *ngFor="let annonce of annonces">
       <div class="card">
-        <img src="https://placehold.co/220x200" class="card-img-top" alt="Objet 1">
+        <img [src]="'http://localhost:8080'+annonce.image" class="card-img-top" alt="{{ annonce.titre }}">
         <div class="card-body">
-          <h5 class="card-title">Clés retrouvées</h5>
-          <p class="card-text">Lieu : Kara, Date : 23 septembre 2024</p>
+          <h5 class="card-title">{{ annonce.titre }}</h5>
+          <p class="card-text">Lieu : {{ annonce.lieu }}, Date : {{ annonce.date | date:'short' }}</p>
           <a href="#" class="btn btn-primary">Voir détails</a>
         </div>
       </div>
     </div>
-    <div class="col-md-3">
-      <div class="card">
-        <img src="https://placehold.co/220x200" class="card-img-top" alt="Objet 2">
-        <div class="card-body">
-          <h5 class="card-title">Portefeuille retrouvé</h5>
-          <p class="card-text">Lieu : Lomé, Date : 21 septembre 2024</p>
-          <a href="#" class="btn btn-primary">Voir détails</a>
-        </div>
-      </div>
-    </div>
+
     <!-- Répéter pour d'autres objets -->
   </div>
 </div>
